# patois

./: Cargo.toml  prek.toml  rustfmt.toml
crates/patois/: Cargo.toml
crates/patois-build/: Cargo.toml
crates/patois-build/src/: lib.rs
crates/patois-macros/: Cargo.toml
crates/patois-macros/src/: lib.rs
crates/patois/src/: catalog.rs  lang.rs  lib.rs  registry.rs  ui.rs
