[package]
name = "patois"
version = "0.1.0"
description = "A lightweight, domain-aware i18n library for Rust desktop applications and utility crates."
edition = "2024"
license = "MIT"
keywords = ["i18n", "l10n", "internationalization", "localization", "gettext"]
categories = ["localization", "internationalization"]

[dependencies]
inventory = "0.3.24"
patois-macros = { path = "../patois-macros" }
