[package]
name = "patois"
version = "0.1.2"
description = "A lightweight, domain-aware i18n library for Rust desktop applications."
edition = "2024"
license = "MIT"
keywords = ["i18n", "l10n", "internationalization", "localization", "gettext"]
categories = ["localization", "internationalization"]

[dependencies]
inventory = "0.3.24"
patois-macros = { version = "0.1.2", path = "../patois-macros" }
sys-locale = "0.3.2"
