[package]
name = "patois"
version = "0.2.0"
description = "A lightweight, domain-aware i18n library for Rust desktop applications."
edition = "2024"
license = "MIT"
keywords = ["i18n", "l10n", "internationalization", "localization", "gettext"]
categories = ["localization", "internationalization"]

[dependencies]
inventory = "0.3.24"
patois-macros = { version = "0.2.0", path = "../patois-macros" }
sys-locale = "0.3.2"
wxdragon = { version = "0.9.17", optional = true }

[features]
ui = ["dep:wxdragon"]
